tests/baselines/reference/doubleUnderStringLiteralAssignability.errors.txt
tests/cases/compiler/doubleUnderStringLiteralAssignability.ts(2,5): error TS2322: Type '"no_dunder"' is not assignable to type '"__dunder"'.


==== tests/cases/compiler/doubleUnderStringLiteralAssignability.ts (1 errors) ====
    var shouldBeOk: '__dunder' = '__dunder';
    var bad: '__dunder' = 'no_dunder';
        ~~~
!!! error TS2322: Type '"no_dunder"' is not assignable to type '"__dunder"'.
    var okok: '___thunder' = '___thunder';
    var alsoOk: '_sunder' = '_sunder';
    